# fuel-data

./: .clang-format  .dockerignore  .env.mainnet.sample  .env.sample  .env.testnet.sample  .gitignore  Cargo.toml  Makefile  package.json  pnpm.yaml  rust-toolchain.toml
.github/actions/setup-rust/: action.yaml
.github/workflows/: ci.yaml  docker_publish.yaml  helm_publish.yaml
crates/fuel-core-interfacing/: Cargo.toml
crates/fuel-core-interfacing-types/: Cargo.toml
crates/fuel-core-interfacing-types/src/: lib.rs
crates/fuel-core-interfacing/src/: fuel_core.rs  fuel_core_like.rs  fuel_core_types.rs  lib.rs
crates/fuel-data-historical-publisher/: Cargo.toml
crates/fuel-data-live-publisher/: Cargo.toml  nats.conf
crates/fuel-data-live-publisher/src/: live_publisher.rs  main.rs  nats_client.rs
crates/fuel-data-nats/: Cargo.toml
crates/fuel-data-primitives/: Cargo.toml
crates/fuel-data-primitives/src/: bytes.rs  lib.rs  script_execution.rs  tx_pointer.rs  utxo_id.rs
crates/fuel-data-proto-types/: Cargo.toml  build.rs
crates/fuel-data-proto-types/src/: lib.rs
crates/fuel-data-protos/: Cargo.toml  build.rs
crates/fuel-data-protos/src/: lib.rs
crates/fuel-data-protos/src/protos/: blocks.proto  blocks.rs
crates/fuel-data-proxy/: Cargo.toml
crates/fuel-data-publisher/: Cargo.toml  nats.conf
crates/fuel-data-publisher/src/: main.rs
crates/fuel-data-publishing/: Cargo.toml
crates/fuel-data-types/: Cargo.toml
crates/fuel-data-types/src/: block.rs  lib.rs
crates/fuel-data-web/: Cargo.toml
crates/fuel-data-web/src/: main.rs  nats_client.rs
crates/fuel-nodes/fuel-node/: Cargo.toml
crates/fuel-nodes/fuel-node/src/: fuel_node_like.rs  fuel_node_types.rs
docker/: docker-compose.yml  fuel-data-historical-publisher.Dockerfile  fuel-data-publisher.Dockerfile
fuel-data-cluster/: Cargo.toml  Chart.yaml
fuel-data-cluster/archive-nats/: .conf
fuel-data-cluster/archive-nats/chart/: Chart.yaml  values.yaml
fuel-data-cluster/archive-nats/chart/templates/: scaledobject.yaml
fuel-data-cluster/archive-nats/charts/: values.yaml
fuel-data-cluster/docker/: .dockerignore  docker-compose.yml
fuel-data-cluster/fuel-archive-node/: Dockerfile
fuel-data-cluster/fuel-archive-node/chart/: Chart.yaml  values-<network>-secret.yaml.sample  values-local.yaml  values-mainnet.yaml  values-testnet.yaml  values.yaml
fuel-data-cluster/fuel-archive-node/chart/templates/: deployment.yaml  rolebinding.yaml
fuel-data-cluster/fuel-data-grpc-edge/: Dockerfile
fuel-data-cluster/fuel-data-grpc-edge/chart/: Chart.yaml  values-local.yaml  values.yaml
fuel-data-cluster/fuel-data-grpc-edge/chart/templates/: deployment.yaml  service.yaml
fuel-data-cluster/fuel-relay-node/: Dockerfile
fuel-data-cluster/fuel-relay-node/chart/: Chart.yaml  values-<network>-secret.yaml.sample  values-local.yaml  values-mainnet.yaml  values-testnet.yaml  values.yaml
fuel-data-cluster/fuel-relay-node/chart/templates/: deployment.yaml
fuel-data-cluster/relay-nats/: .conf
fuel-data-cluster/relay-nats/chart/: values.yaml
fuel-data-cluster/relay-nats/charts/: values-local.yaml  values.yaml
fuel-data-cluster/src/: lib.rs
fuel-data-cluster/~environments/local/: docker-compose.yml  helmfile.yaml  k3d-registry.yaml
fuel-data-cluster/~environments/remote/: helmfile.yaml
fuel-data-cluster/~monitoring/: values-keda.yaml  values-prom-adapter.yaml  values-prom.yaml
fuel-data-crates/fuel-data-nats/: Cargo.toml  nats.conf
fuel-data-crates/fuel-data-nats/src/: lib.rs  nats_client.rs
fuel-data-crates/fuel-data-publishing/: Cargo.toml
fuel-data-crates/fuel-data-subjects/: Cargo.toml
fuel-data-crates/fuel-data-subjects/macros/: Cargo.toml
fuel-data-crates/fuel-data-subjects/macros/src/: lib.rs
fuel-data-crates/fuel-data-types/: Cargo.toml
fuel-data-crates/fuel-data-types/src/: block.rs  lib.rs
fuel-data-crates/fuel-data-types/src/primitives/: bytes.rs  common.rs  script_execution.rs  tx_pointer.rs  utxo_id.rs
fuel-data-edges/fuel-data-edge/: Cargo.toml
fuel-data-edges/fuel-data-edge/src/: errors.rs  lib.rs
fuel-data-edges/fuel-data-graphql-edge/: Cargo.toml
fuel-data-edges/fuel-data-grpc-edge/: Cargo.toml
fuel-data-edges/fuel-data-grpc-edge/src/: main.rs  streamers.rs
fuel-data-edges/fuel-data-grpc-edge/src/streamers/: blocks_streamer.rs
fuel-data-edges/fuel-data-ws-edge/: Cargo.toml
fuel-data-frontends/fuel-data-docs/: package.json
fuel-data-frontends/fuel-data-playground/: package.json
fuel-data-protos/: Cargo.toml  build.rs
fuel-data-protos/protos/fuel-data-edge/: filters.proto
fuel-data-protos/protos/fuel-data-edges/fuel-data-edge/: filters.proto
fuel-data-protos/protos/fuel-data-edges/fuel-data-grpc-edge/: streams.proto
fuel-data-protos/protos/fuel-data-grpc-edge/: streams.proto
fuel-data-protos/protos/fuel-data-types/: block.proto
fuel-data-protos/src/: lib.rs
fuel-data-protos/src/fuel_data_types/: block.rs
fuel-data-sdks/fuel-data-browser-ts/: package.json
fuel-data-sdks/fuel-data-rs/: Cargo.toml
fuel-data-sdks/fuel-data-rs/src/: edge.rs  errors.rs  main.rs  networks.rs  streams.rs
fuel-data-sdks/fuel-data-rs/src/streams/: blocks_stream.rs
fuel-data-sdks/fuel-data-server-ts/: package.json
fuel-data-sdks/fuel-data-streams-rs/: Cargo.toml
fuel-data-sdks/fuel-data-streams-rs/src/: main.rs
fuel-data-sdks/fuel-data-streams-ts/: package.json  rollup.config.js  tsconfig.json
fuel-data-sdks/fuel-data-ts/: package.json  pnpm-lock.yaml
fuel-nodes/fuel-archive-node/: Cargo.toml
fuel-nodes/fuel-node/: Cargo.toml
fuel-nodes/fuel-node-publishing/: Cargo.toml
fuel-nodes/fuel-node-publishing/src/: lib.rs  packets.rs  subjects.rs
fuel-nodes/fuel-node-types/: Cargo.toml
fuel-nodes/fuel-node-types/src/: lib.rs
fuel-nodes/fuel-relay-node/: Cargo.toml  nats.conf
helm/: .helmignore
helm/fuel-data-historical-publisher/: Chart.yml  values.yml
helm/fuel-data-publisher/: Chart.yml  values.yml
scripts/: env.sh  setup.sh  start-live-pub.sh  start-relay-node.sh
scripts-local/: start-archive-node.sh  start-relay-node.sh
(+30 files in other folders)
