[package]
name = "fuel-data-cluster"
description = "Fuel Data Cluster"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
dotenvy = { workspace = true }
