[package]
name = "fuel-data-protos"
authors.workspace = true
keywords.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
fuel-node = { workspace = true, optional = true }
tonic = "0.12"
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.1.0"
regex = "1.7"
walkdir = "2.4"

[features]
default = ["fuel-data-edges", "fuel-data-types"]
"fuel-data-edges" = ["fuel-data-edge", "fuel-data-grpc-edge"]
"fuel-data-edge" = []
"fuel-data-grpc-edge" = []
"fuel-data-types" = ["fuel-node"]
