[package]
name = "fuel-data-protos"
authors.workspace = true
keywords.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3.1.0"
