[package]
name = "fuel-data-nats"
description = "All NATS related logic for fuel-data"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
displaydoc = { workspace = true }
dotenvy = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = []
test-helpers = []
