[package]
name = "fuel-data-types"
authors.workspace = true
keywords.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
fuel-core = { workspace = true, default-features = false, features = [
    "p2p",
    "relayer",
    "rocksdb",
    "test-helpers",
] }
fuel-core-client = { workspace = true, default-features = false, features = [
    "std",
] }
fuel-core-importer = { workspace = true }
fuel-core-types = { workspace = true, default-features = false, features = [
    "std",
    "serde",
] }
fuel-node = { workspace = true, features = ["types"] }
fuel-data-proto-types = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
