[package]
name = "fuel-data-types"
authors.workspace = true
keywords.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
fuel-core = { workspace = true, default-features = false, features = [
    "p2p",
    "relayer",
    "rocksdb",
    "test-helpers",
] }
fuel-core-client = { workspace = true, default-features = false, features = [
    "std",
] }
fuel-core-importer = { workspace = true }
fuel-core-types = { workspace = true, default-features = false, features = [
    "std",
    "serde",
] }
fuel-node-types = { workspace = true }
fuel-data-protos = { workspace = true, features = ["fuel-data-types"] }
hex = { workspace = true }
serde = { workspace = true }
tai64 = "4.0.0"
