[package]
name = "fuel-data-edge"
authors.workspace = true
keywords.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
