[package]
name = "fuel-data-edge"
authors.workspace = true
keywords.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
dotenvy = { workspace = true }
fuel-data-cluster = { workspace = true }
fuel-data-subjects = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
