[package]
name = "fuel-data-grpc-edge"
authors.workspace = true
keywords.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
dotenvy = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true }
tonic = "0.12"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
fuel-data-protos = { workspace = true, features = ["fuel-data-grpc-edge"] }
fuel-data-cluster = { workspace = true }
fuel-data-nats = { workspace = true }
tokio-stream = { workspace = true }
