[package]
name = "fuel-data-rs"
authors.workspace = true
keywords.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "fuel-data-rs"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
fuel-data-types = { workspace = true }
fuel-data-protos = { workspace = true, features = ["fuel-data-grpc-edge"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tonic = "0.12"
tokio-stream = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
