[package]
name = "fuel-data-streams-rs"
authors.workspace = true
keywords.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
fuel-data-protos = { workspace = true, features = ["fuel-data-grpc-edge"] }
prost = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tonic = "0.12"
tokio-stream = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
