[package]
name = "fuel-node-publishing"
description = "Houses common code for nodes publishing fuel data"
authors.workspace = true
keywords.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
fuel-node = { workspace = true }
fuel-data-types = { workspace = true }
prost = { workspace = true }
