[package]
name = "fuel-node"
description = "Adapters and Interfaces used for integrating Fuel client node"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
derive_more = { version = "1.0", features = ["full"] }
displaydoc = { workspace = true }
dotenvy = { workspace = true }
elasticsearch = "8.15.0-alpha.1"
fuel-core = { workspace = true }
fuel-core-bin = { workspace = true }
fuel-core-client = { workspace = true }
fuel-core-importer = { workspace = true }
fuel-core-services = { workspace = true }
fuel-core-storage = { workspace = true }
fuel-core-types = { workspace = true }
futures = { workspace = true }
num_cpus = "1.16"
parking_lot = { version = "0.12", features = ["serde"] }
prometheus = { version = "0.13", features = ["process"] }
rand = { workspace = true }
rayon = "1.10.0"
rust_decimal = { version = "1.13" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_prometheus = { version = "0.2" }
sha2 = { workspace = true }
thiserror = "2.0"
tokio = { workspace = true }
tracing = { workspace = true }
url = "2.5"


[features]
default = ["all"]
types = []
all = ["types"]
test-helpers = ["all"]
